# DS_knowledge_base

./: .gitignore  README.md  Useful_Links.md
Algs/: LeetCode🤢.ipynb
Analytics/: Risk_analytics_test.ipynb
DeepLearning/: DL_HT1.ipynb  GD_DL_task.ipynb  IntroToPyTorch_task.ipynb  PyTorch_hometask.ipynb  pyproject.toml
ML_and_CV_2024/: Lecture_20240116_Pandas.ipynb  Lecture_20240116_numpy.ipynb
ML_and_CV_2024/data/: Задание 2_2.csv
Postupashki/HW1/: ДЗ1. Pandas, Numpy.ipynb
Practical_ML/: Classifiers_demo.ipynb  GD_task.ipynb  KNN_task.ipynb  LinReg_task.ipynb  RegressionExample.ipynb
Practical_ML_stepik/: EDA_task.ipynb  GD_task.ipynb  LinReg_task.ipynb  LogReg_final_task.ipynb  LogReg_screencast.ipynb  LogReg_task.ipynb  NA_screencast.ipynb  Pipeline_task.ipynb
Practical_ML_stepik/2.Intro_to_ML/: EDA_task.ipynb  LinReg_task.ipynb  Pipeline_task.ipynb
Project_Workshop/: CSE_student_performances.csv  sem1.ipynb
Projects/CNN/: CNN.ipynb
Projects/CompanyBankruptcyPrediction/: CompanyBankruptcyPrediction.ipynb  README.md
Projects/Detecting_Conv/: Conv.ipynb
Projects/Pokemon_clustering/: Pokemon_clustering.ipynb
Projects/StudentAlcoholConsumption/: studentalcoholconsumption-ml-and-eda.ipynb  studentalcoholconsumption_ml_and_eda.ipynb
Projects/StudentPerfomances/: README.md  StudentPerformances.ipynb
Projects/StudentPerfomances/data/: CSE_student_performances_cleaned.csv
Projects/Video_Processing/: Video_Processing.ipynb
Useful_md/: How_to_setup_Jupyter_notebook.md  Useful_Links.md
